Minor eslint change

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -11,5 +11,6 @@ parserOptions:
 plugins:
   - '@typescript-eslint'
 rules: {
-  semi: [error, always]
+  semi: [error, always],
+  space-before-function-paren: [error, never],
 }
