--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc",
     "lint": "eslint --ext .ts .",
-    "test": "jest"
+    "test:unit": "jest --testPathPattern=src/test/unit/",
+    "test:integration": "jest --testPathPattern=src/test/integration/"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   },
   "homepage": "https://github.com/afalvella/test-ci-cd-pipeline#readme",
   "devDependencies": {
+    "@types/ioredis": "^4.27.0",
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.1",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
@@ -32,5 +34,8 @@
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "ioredis": "^4.27.8"
   }
 }
