--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,3 +23,12 @@ unit-test-job:
   script:
     - npm install
     - npm run test:unit
+
+integration-test-job:
+  stage: test
+  script: 
+    - npm install
+    - npm run test:integration
+  services:
+    - name: redis:6.0.10-alpine
+    - alias: redis
